# llm-observability-proxy

./: .editorconfig  .env.example  .gitignore  .release-please-manifest.json  ARCHITECTURE.md  CACHE_FEATURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
data/: proxy.db-shm
docker/: Dockerfile  docker-compose.yml
docs/: DASHBOARD_NAVIGATION.md  OPENCLAW_TIMEOUT.md  README.zh-CN.md  STREAM_USAGE_DEBUG.md
migrations/: add_base_url.py  add_composite_indexes.py  add_headers_and_cache_fields.py  add_supported_models.py
scripts/: benchmark_dashboard.py  test_proxy_recording.py
scripts/tests/: benchmark_proxy.py
src/: __init__.py  config.py  main.py
src/analytics/: deep_analytics.py  provider_routes.py  request_routes.py  routes.py
src/api/: model_mapping.py
src/auth/: __init__.py  auth_cache.py  key_manager.py  middleware.py  types.py
src/cache/: __init__.py  embedding.py  semantic_cache.py  vector_store.py
src/models/: __init__.py  database.py  model_mapping.py  page_view.py  provider_key.py  proxy_key.py  request_log.py
src/proxy/: anthropic_converter.py  handler.py  routes.py
src/proxy/protocols/: __init__.py  anthropic.py  base.py  factory.py  openai.py  registry.py
src/proxy/protocols/plugins/: README.md
src/recorder/: __init__.py  logging_queue.py  recorder.py
src/web/: layout.py  middleware.py  routes.py
tests/: test_anthropic_protocol.py
tests/integration/: test_api.py
tests/unit/: test_auth.py  test_cache.py  test_recorder.py  test_vector_store.py  test_web_helpers.py
