[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-observability-proxy"
version = "0.1.0"
description = "A lightweight LLM API proxy for monitoring and analyzing LLM API calls across different applications"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "LLM Observability Proxy Contributors" }
]
keywords = [
    "llm",
    "openai",
    "anthropic",
    "api-proxy",
    "observability",
    "monitoring",
    "logging",
    "tracing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "sqlalchemy>=2.0.25,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "httpx>=0.26.0,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "jinja2>=3.1.3,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.3,<1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]
embedding = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
]
cache = [
    "redis>=5.0.0",
    "chromadb>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Xiang3999/llm-observability-proxy"
Repository = "https://github.com/Xiang3999/llm-observability-proxy.git"
Issues = "https://github.com/Xiang3999/llm-observability-proxy/issues"
Documentation = "https://github.com/Xiang3999/llm-observability-proxy#readme"

[project.scripts]
llm-proxy = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"src" = "src"

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
